<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.jennyfer.sapallanay.tecswap.ui.viewmodel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        tools:context=".ui.fragments.SignupTabFragment">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/logo2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <EditText
                    android:id="@+id/signup_name"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:padding="8dp"
                    android:hint="@string/name_txt"
                    android:drawableLeft="@drawable/round_person_24"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edittext_bkg"
                    android:text="@={viewModel.name}"
                    app:layout_constraintTop_toBottomOf="@+id/logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"/>

                <EditText
                    android:id="@+id/signup_lastname"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="Apellido"
                    android:drawableLeft="@drawable/round_person_24"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edittext_bkg"
                    android:text="@={viewModel.lastname}"
                    app:layout_constraintTop_toBottomOf="@+id/signup_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"/>

                <EditText
                    android:id="@+id/signup_phone"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="@string/phone_txt"
                    android:drawableLeft="@drawable/round_phone_24"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edittext_bkg"
                    android:text="@={viewModel.phone}"
                    app:layout_constraintTop_toBottomOf="@+id/signup_lastname"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"/>

                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="@string/email_txt"
                    android:drawableLeft="@drawable/round_email_24"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edittext_bkg"
                    android:text="@={viewModel.email}"
                    app:layout_constraintTop_toBottomOf="@+id/signup_phone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"/>

                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="Contraseña"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/round_lock_24"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edittext_bkg"
                    android:text="@={viewModel.password}"
                    app:layout_constraintTop_toBottomOf="@+id/signup_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"/>

                <EditText
                    android:id="@+id/signup_confirm_password"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="@string/password_again_txt"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/round_password_24"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edittext_bkg"
                    android:text="@={viewModel.confirmPassword}"
                    app:layout_constraintTop_toBottomOf="@+id/signup_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"/>

                <EditText
                    android:id="@+id/signup_carrera"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="@string/carrer_txt"
                    android:drawableLeft="@drawable/round_school_24"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edittext_bkg"
                    android:text="@={viewModel.carrera}"
                    app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"/>

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/register_txt"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_background"
                    app:layout_constraintTop_toBottomOf="@+id/signup_carrera"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"/>

                <TextView
                    android:id="@+id/login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/already_have_account_login"
                    android:textColor="@color/fifth_theme"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/signup_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>




